--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>ADITIYA GAMA</h1>
-    <img src="/images/AG_PIC.png" alt="Aditiya's profile picture" width="200">
+    <img src="resume-AG-2024/images/AG_PIC.png" alt="Aditiya's profile picture" width="200">
     <h2>Summary</h2>
     <p>
       Qualified and versatile individual with experience and skillsets in
